# multiway-alignment

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: 10_universal_clustering.yaml  2_scaffolding.yaml  3_reid.yaml  4_semantic_addition.yaml  4_semantic_corruption.yaml  4_semanticity.yaml  9_multiret.yaml  9_multiret_m10.yaml  9_multiret_m3.yaml  9_multiret_m3_diverse.yaml  9_multiret_m5.yaml  9_multiret_m5_diverse.yaml  alignment.yaml
metadata/market1501/: README.md  bounding_box_test_order.txt  bounding_box_train_order.txt  query_order.txt
misc/: full_to_short_model_name.json  palette.json
src/cycloreps/: __init__.py
src/cycloreps/translator/: gcca.py  gpa.py  identity.py  linear_ortho.py  ortho.py  translator.py
src/cycloreps/utils/: dim_matcher.py  io_utils.py  standard_scaler.py  utils.py  validation_tests.py
src/scripts/: dataset_utils.py  exp_utils.py
src/scripts/embed/: embed_texts_multilingual_retrieval.py
src/scripts/exps/: 10_universal_clustering.py  11_geometry.py  2_scaffolding.py  3_reid.py  4_semantic.py  9_multiret.py  multiret.sh  semanticity.sh
